--- a/app/views/applics/edit.html.erb
+++ b/app/views/applics/edit.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, 'Редактирование заявки на конференцию') %>
+<% provide(:title, t(:edit_your_application)) %>
 <h1><%= t(:edit_your_application) %></h1>
 <%= render 'form' %>
