finish en localization

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -4,7 +4,7 @@
 
 $grayMediumLight: #eaeaea;
 
-input, textarea, .uneditable-input {
+input, textarea, select, .uneditable-input {
 width: 500px;
 }
 
