--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Редактировать аккаунт</h2>
+<h2><%= t(:edit_account) %></h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
@@ -6,11 +6,11 @@
   <%= f.input :is_antok_member, :as => :boolean %>
   <%= f.input :antok_id%>  
   <%= f.input :email, :required => true %>
-  <%= f.input :password, :autocomplete => "off", :hint => "оставьте пустым если не хотите изменять", :required => false %>
+  <%= f.input :password, :autocomplete => "off", :hint => t(:leave_it_blank), :required => false %>
   <%= f.input :password_confirmation, :required => false %>
-  <%= f.input :current_password, :hint => "нужен текущий пароль, чтобы сохранить изменения", :required => true %>
-  <%= f.button :submit, 'Сохранить', :class => 'btn-primary' %>
+  <%= f.input :current_password, :hint => t(:we_need_your_current_password), :required => true %>
+  <%= f.button :submit, t(:update), :class => 'btn-primary' %>
 <% end %>
-<h3>Удалить аккаунт</h3>
-<p>Несчастны? <%= link_to "Удилить мой аккаунт", registration_path(resource_name), :data => { :confirm => "Вы уверены?" }, :method => :delete %>.</p>
-<%= link_to "Назад", :back %>
+<h3><%= t(:cancel_my_account) %></h3>
+<p><%= t(:unhappy) %> <%= link_to t(:cancel_my_account), registration_path(resource_name), :data => { :confirm => "#{t(:are_you_sure)}?" }, :method => :delete %>.</p>
+<%= link_to t(:back), :back %>
