improve foreigner registration

--- a/app/views/applic_mailer/new_applic_notification.html.slim
+++ b/app/views/applic_mailer/new_applic_notification.html.slim
@@ -1,4 +1,7 @@
 h1 => @applic.user.name 
-p Ваша заявка на участие в Конференции АНТОК-2014 в Екатеринбурге успешно зарегистрирована. 
-p Идентификационный номер участника #{@applic.id}
-p По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com.
+p = t(:application_registered) 
+p #{t(:application_id_number)} #{@applic.id}
+p = t(:questions_application)
+p = t(:abstracts)
+- if I18n.locale.to_s == 'en'
+  p = link_to "Download template for the Abstracts", 'http://e2014.aksts.ru/docs/Template_Papers.doc'
