--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,13 @@
   <%= f.error_notification %>
   <%= display_base_errors resource %>
   <%= f.input :name, :autofocus => true, :required => true %>
-  <%= f.input :is_antok_member, :as => :boolean %> 
-  <%= f.input :antok_id%>
+  <% if params[:locale]=='en' %>
+    <%= f.input :is_foreign, :as => :boolean %>
+  <% end %>
+  <% if params[:locale]!='en' %>
+    <%= f.input :is_antok_member, :as => :boolean %> 
+    <%= f.input :antok_id%>
+  <% end %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
