--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,6 +45,8 @@
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
               </div>
             </div>
+        <p><%= link_to "Скачать программу конференции (рус.)", '/docs/Program_rus(1804).doc' %></p>
+        <p><%= link_to "Download conference program (eng.)", '/docs/Program_eng(1804).doc' %></p>
         <p><%= link_to "Скачать 1-е информационное письмо (на русском)", '/docs/Inform1_AKSTSconf2014_rus.pdf' %></p>
         <p><%= link_to "Download 1-st informational letter (in english)", '/docs/Inform1-AKSTSconf2014_eng.pdf'%></p>
         <br/>    
