fill program page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,120 +1,91 @@
-     body {
-        padding-top: 20px;
-        padding-bottom: 60px;
-      }
+body {
+  padding-top: 20px;
+  padding-bottom: 60px;
+}
 
-      /* Custom container */
-      .container {
-        margin: 0 auto;
-        max-width: 1000px;
-      }
-      .container > hr {
-        margin: 10px 0;
-      }
-
-      /* Main marketing message and sign up button */
-      .jumbotron {
-        margin: 50px 0;
-        text-align: center;
-      }
-      .jumbotron h1 {
-        font-size: 50px;
-        line-height: 1.2;
-      }
-      .jumbotron .lead {
-        font-size: 20px;
-        line-height: 1.25;
-        padding-top: 20px;
-        padding-bottom: 10px;
-      }
-      .jumbotron .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-      }
-
-      /* Supporting marketing content */
-      .marketing {
-        margin: 60px 0;
-      }
-      .marketing p + h4 {
-        margin-top: 28px;
-      }
-
-
-      /* Customize the navbar links to be fill the entire space of the .navbar */
-      .navbar {
-        padding: 20px 0 0 0;
-        // padding-top: 50;
-      } 
-
-      .navbar-inner {
-        padding: 0;
-      }
-      .navbar .nav {
-        margin: 0;
-        display: table;
-        width: 100%;
-        li {
-          display: table-cell;
-          width: 16.5%;
-          float: none; 
-          a {
-            font-weight: bold;
-            text-align: center;
-            border-left: 1px solid rgba(255,255,255,.75);
-            border-right: 1px solid rgba(0,0,0,.1);            
-          }   
-          &:first-child a {
-            border-left: 0;
-            border-radius: 3px 0 0 3px;            
-          }     
-          &:last-child a {
-            border-right: 0;
-            border-radius: 0 3px 3px 0;
-          } 
-        }
-      }
-
-      .my1 {
-        width: 660px;
-        margin: 0 auto;
-      }
-
-      .site-name {
-        float: left;
-        width: 70%;
-      }
-
-      .lang-box {
-        float:right;
-        width: 30%;
-      }
-
-      .lang1 {
-        float:left;
-      }
-
-
-
-footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px;
-  a {
-    color: gray;
-    &:hover {
-      color: black;
-    }
+/* Custom container */
+.container {
+  margin: 0 auto;
+  max-width: 1000px;
+  > hr {
+    margin: 10px 0;
   }
-  small {
-    float: left;
+}
+
+
+/* Main marketing message and sign up button */
+.jumbotron {
+  margin: 50px 0;
+  text-align: center;
+  h1 {
+    font-size: 50px;
+    line-height: 1.2;    
   }
-  ul {
-    float: right;
-    list-style: none;
+  .lead {
+    font-size: 20px;
+    line-height: 1.25;
+    padding-top: 20px;
+    padding-bottom: 10px;    
+  }
+  .btn {
+    font-size: 21px;
+    padding: 14px 24px;
+  }
+}
+
+/* Customize the navbar links to be fill the entire space of the .navbar */
+.navbar {
+  padding: 20px 0 0 0;
+  // padding-top: 50;
+  .nav {
+    margin: 0;
+    display: table;
+    width: 100%;
     li {
-      float: left;
-      margin-left: 10px;
+      display: table-cell;
+      width: 16.5%;
+      float: none; 
+      a {
+        font-weight: bold;
+        text-align: center;
+        border-left: 1px solid rgba(255,255,255,.75);
+        border-right: 1px solid rgba(0,0,0,.1);            
+      }   
+      &:first-child a {
+        border-left: 0;
+        border-radius: 3px 0 0 3px;            
+      }     
+      &:last-child a {
+        border-right: 0;
+        border-radius: 0 3px 3px 0;
+      } 
     }
   }
+} 
+
+.navbar-inner {
+  padding: 0;
+}
+
+.my1 {
+  width: 660px;
+  margin: 0 auto;
+}
+
+.site-name {
+  float: left;
+  width: 70%;
+}
+
+.lang-box {
+  float:right;
+  width: 30%;
+}
+
+.lang1 {
+  float:left;
+}
+
+ul.no-bullets {
+  list-style-type: none;
 }
