--- a/app/views/static_pages/programme.html.slim
+++ b/app/views/static_pages/programme.html.slim
@@ -1,5 +1,5 @@
 - if params[:locale]=='en'
-  h3 Program of AKSTS Scientific and Technical Conference in Yekaterinburg (draft)
+  h3 Program of Scientific and Technical Conference in Yekaterinburg (draft)
   h4 3.07 (Thr) – Participants Arrival to Yekaterinburg, Hotel check-in
   ul.no-bullets
     li 14:00 – 18:00 Hotel check-in
@@ -23,7 +23,7 @@
     li 13:00 – 15:30 Solemn meeting and a concert dedicated to the anniversary of the voluntary resettlement of Koreans in Russia (with All-Russia Association of Korean – Ural Chapter)
     li 15:30 – 16:30 Furshet
 - else
-  h3 Программа научно-технической конференции АНТОК в Екатеринбурге (проект)
+  h3 Программа научно-технической конференции в Екатеринбурге (проект)
   h4 3.07 (Чт) – Приезд иногородних участников конференции, размещение в гостинице
   ul.no-bullets  
     li 14:00 – 18:00 Заезд в гостиницу
