--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
                   <div class="item active">
                     <%= image_tag("slide-image-1.jpg", alt: "") %>
                     <div class="carousel-caption">
-                      <p>Конференция АНТОК-2011, Звенигород</p>
+                      <p>Конференция 2011 года, Звенигород</p>
                     </div>
                   </div>
                   <div class="item">
@@ -37,7 +37,7 @@
                   <div class="item">
                     <%= image_tag("slide-image-3.jpg", alt: "") %>
                     <div class="carousel-caption">
-                      <p>Конференция АНТОК-2013, Новосибирск</p>
+                      <p>Конференция 2013 года, Новосибирск</p>
                     </div>
                   </div>
                 </div>
