new inform rus letter

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,8 +47,8 @@
             </div>
 <!--         <p><%= link_to "Скачать программу конференции (рус.)", '/docs/Program_rus(1804).doc' %></p>
         <p><%= link_to "Download conference program (eng.)", '/docs/Program_eng(1804).doc' %></p> -->
-        <p><%= link_to "Скачать 1-е информационное письмо (на русском)", '/docs/Inform1_AKSTSconf2014_rus.pdf' %></p>
-        <p><%= link_to "Download 1-st informational letter (in english)", '/docs/Inform1-AKSTSconf2014_eng.pdf'%></p>
+        <p><%= link_to "Скачать информационное письмо (на русском)", '/docs/info_letter_eburg2014_rus.docx' %></p>
+        <p><%= link_to "Download informational letter (in english)", '/docs/Inform1-AKSTSconf2014_eng.pdf'%></p>
         <br/>    
         <% if !user_signed_in? %>
         <%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%>
