--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,2 +1,22 @@
-h1 StaticPages#about
-p Find me in app/views/static_pages/about.html.slim
+h2 О конференции
+div.mytext
+  p Конференция проводится в рамках юбилейных мероприятий, посвященных 150-летию добровольного переселения корейцев в Россию, Уральским отделением Общероссийского объединения корейцев (ООК) совместно с Корейско-Российским Центром научно-технологического сотрудничества (KORUSTEC) при поддержке Корейской федерации научно-технологических обществ (KOFST).
+  p Российско-корейская научно-практическая конференция – это мероприятие, на котором ученые и инженеры России, стран СНГ и Кореи могут обсудить новейшие достижения и будущие тренды развития науки и техники.
+  p Конференция будет проходить в г. Екатеринбурге с 4 по 5 июля 2014 года на базе Уральского Федерального Университета (УрФУ).
+  p Данное мероприятие является площадкой для обсуждения различных вопросов, касающихся науки и технологии, оно предоставляет уникальную возможность совместной работы российских и корейских ученых и инженеров. Конференция будет способствовать развитию двустороннего обмена между университетами, институтами и промышленностью России и Кореи.
+div.mypic 
+  p = image_tag "aksts_old.jpg"
+  div#small Международная научно-практичесая конференция АНТОК в Новосибирске, Новосибирский Государственный Технический Университет, 2013
+h3 Организационный комитет
+p <b>Состав оргкомитета конференции</b>:
+div.orgcom
+	table
+	  tr
+	    td.first Председатель:
+	    td Тен Э.Б., проф. Национального исследовательского технологического университета «МИСиС», представитель KOFST в России; 
+	  tr 
+	    td.first Сопредседатели:
+	    td Тхай В.Д., зам. председателя Уральского отделения ООК, проф. Уральской государственной медицинской академии; <br/> Лим Сан Хюн, директор KORUSTEC.
+	  tr 
+	    td.first Члены оргкомитета:
+	    td Кокшаров В.А., ректор Уральского Федерального университета им. Б.Н.Ельцина; <br/>Цой Е.Б., проректор Новосибирского государственного технического университета; <br/> Сон Э.Е., член-корреспондент Российской Академии Наук;<br/>Чо Г.Ч., доцент Национального исследовательского университета «МЭИ» (ответственный секретарь конференции).
