--- a/app/views/static_pages/hotel.html.slim
+++ b/app/views/static_pages/hotel.html.slim
@@ -1,2 +1,26 @@
-h1 StaticPages#hotel
-p Find me in app/views/static_pages/hotel.html.slim
+h2 Как добраться
+div.mytext
+  p Иногородние участники конференции размещаются в гостинице «Октябрьская», расположенной по адресу: Екатеринбург, ул. Софьи Ковалевской, д. 17.<br/> Телефоны: +7 (343) 253-20-55, +7 (343) 266-32-39.
+h3 Схемы проезда от аэропорта и жд вокзала до гостиницы
+p Гостиница расположена недалеко от остановки  «Академическая»
+p Чтобы доехать от аэропорта «Кольцово» до остановки «Академическая», в аэропорту необходимо сесть на автобус №1, на остановке «Декабристов (ул. Белинского)» пересесть на маршрутное такси №030 и доехать до остановки «Академическая». Время в пути займет около 1 ч.
+p = image_tag "trip1.jpg"
+p Чтобы доехать от жд вокзала «Екатеринбург-Пассажирский» до остановки «Академическая», на жд вокзале необходимо сесть на маршрутное такси №082 и доехать до остановки «Академическая». Время в пути займет около 30 мин.
+p = image_tag "trip2.jpg"
+p Расстояние от остановки «Академическая» до гостиницы «Октябрьская» примерно 350 м. Выйдя из маршрутного такси, необходимо дойти до перекрестка и на нем повернуть на ул. Академическая. Пройдя 1 квартал, повернуть налево и немного пройти вперед. По правой стороне будет расположена гостиница.
+p = image_tag "trip3.jpg"
+h3 Схемы проезда от гостиницы, аэропорта и жд вокзала до места проведения конференции (УрФУ)
+p Конференция будет проходить в УрФУ по адресу ул. Мира, 19. 
+p Дорога от гостиницы до УрФУ пешком займет около 15 мин. Выйдя из гостиницы, необходимо повернуть направо и идти вдоль ул. Софьи Ковалевской, пересекая ул. Первомайская, до пересечения с пер. Лобачевского. Так и находится УрФУ.
+p = image_tag "trip4.jpg"
+p Уральский Федеральный Университет находится рядом с остановкой «Софьи Ковалевской»
+p Чтобы доехать от аэропорта «Кольцово» до остановки «Софьи Ковалевской», в аэропорту необходимо сесть на автобус №1, доехать до остановки «Гостиница «Центральная», перейти вдоль транспортного кольца на остановку «Гостиница «Центральная» (ул. Малышева)»  и сесть на маршрутное такси №070 или троллейбус №7, доехать до остановки «Софьи Ковалевской». Время в пути займет около 1 ч. Схема проезда:
+p = image_tag "trip5.jpg"
+p Схема перехода с остановки «Гостиница «Центральная» на остановку «Гостиница «Центральная» (ул. Малышева)»:
+p = image_tag "trip6.jpg"
+p Выйдя на остановке «Софьи Ковалевской», необходимо пройти до перекрестка в обратном направлении относительно транспорта, на котором приехали,  повернуть налево, затем идти прямо вдоль ул. Софьи Ковалевской примерно 5 мин (300 м). УрФУ будет находиться по правую сторону дороги:
+p = image_tag "trip7.jpg"
+p Чтобы доехать от жд вокзала «Екатеринбург-Пассажирский» до остановки «Софьи Ковалевской», на жд вокзале необходимо сесть на маршрутное такси №082 и выйти на требуемой остановке. Время в пути займет около 30 мин. Схема проезда:
+p = image_tag "trip8.jpg"
+p Выйдя на остановке «Софьи Ковалевской», необходимо перейти дорогу и идти вдоль ул. Софьи Ковалевской около 5 мин (300 м). УрФУ будет находиться по правую сторону дороги:
+p = image_tag "trip9.jpg"
