--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,11 +15,14 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  margin: 50px 0;
+  margin-top: 50px;
   text-align: center;
   h1 {
     font-size: 50px;
     line-height: 1.2;    
+  }
+  p {
+    text-align: justify;
   }
   .lead {
     font-size: 20px;
@@ -87,4 +90,39 @@ body {
 
 ul.no-bullets {
   list-style-type: none;
+}
+
+#attach {
+  margin-top:30px;
+}
+
+.mytext {
+  p {
+    text-align: justify;
+  }
+}
+
+.mypic {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#small {
+  text-align: center;
+  font-size: 12px;
+}
+
+.orgcom {
+  table {
+    border-spacing: 10px;
+    border-collapse: separate;
+    tr {
+      td.first {
+        text-align: right;
+        width: 200px;
+        // padding: 0 10px 0 10px;
+        vertical-align: top;
+      }
+    }
+  }
 }
