Ten picture title change

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,7 @@
       <div class="jumbotron">
         <div class="row">
           <div class="span7">
-            <h2>Приветственное слово представителя KOFST в России</h2>
-            <p style="text-align:center;">Дорогие дамы и господа, ученые и инженеры!</p>
+            <p style="text-align:center;"><b>Дорогие дамы и господа, ученые и инженеры!</b></p>
             <p>Рад сообщить, что 15-я конференция будет проходить с 4 по 5 июля 2014г. в Екатеринбурге.  Несомненно, ученые как России, так и Кореи вносят большой вклад в организацию этого мероприятия.</p>
             <p>Организационный комитет делает все возможное, чтобы конференция прошла успешно. Нам помогают Уральское отделение Общероссийского объединения корейцев (ООК), Корейско-Российский Центр научно-технологического сотрудничества (KORUSTEC) при поддержке Корейской федерации научно-технологических обществ (KOFST). Я уверен, что благодаря нашим усилиям конференция станет одним из запоминающихся событий 2014 года.</p>
             <p>4 июля 2014 года в первой и во второй половине дня будет проходить работа секций конференции по направлениям: физика, математика, информационные технологии и нанотехнологии, энергетика, электротехника, машиностроение, механика, химия, новые материалы и технологии их обработки, биотехнологии, биология, технологии живых систем, океанография, геология, природные ресурсы и общественные науки.</p>
@@ -15,6 +14,9 @@
           </div>
           <div class="span5">
             <%= image_tag "teneb.jpg" %>
+            <div id="small">
+              Тэн Э.Б., проф. Национального исследовательского технологического университета "МИСиС", председатель оргкомитета конференции
+            </div>
             <div id="attach">
               <p style="text-align:center;"><%= link_to "Скачать информационное письмо (на русском)", '/docs/info_letter_eburg2014_rus.docx' %></p>
               <p style="text-align:center;"><%= link_to "Download informational letter (in english)", '/docs/Inform1-AKSTSconf2014_eng.pdf'%></p>  
