--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
             <p>В рамках конференции будет проходить круглый стол по проблемам международного научного сотрудничества, а также семинар «Опыт публикаций научных данных в ведущих изданиях WEB of Science, Scopus».</p>
             <p>5 июля состоится экскурсия по городу Екатеринбург и посещение концерта, посвященного Юбилею добровольного переселения корейцев в Россию.</p>
             <p>Ваше участие в мероприятии имеет большое значение. Конференция даст вам замечательную возможность встретиться с коллегами и обменяться профессиональным опытом для дальнейшего сотрудничества.</p>
-            <p>Представитель KOFST в России<br/>
+            <p>Председатель оргкомитета конференции,<br/>
             д.т.н., проф. НИТУ МИСИС Тен Эдис Борисович</p>           
           </div>
           <div class="span5">
