--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -13,7 +13,7 @@ div.orgcom
 	table
 	  tr
 	    td.first Председатель:
-	    td Тен Э.Б., проф. Национального исследовательского технологического университета «МИСиС», представитель KOFST в России; 
+	    td Тен Э.Б., проф. Национального исследовательского технологического университета «МИСиС». 
 	  tr 
 	    td.first Сопредседатели:
 	    td Тхай В.Д., зам. председателя Уральского отделения ООК, проф. Уральской государственной медицинской академии; <br/> Лим Сан Хюн, директор KORUSTEC.
