--- a/app/views/messages/edit.html.slim
+++ b/app/views/messages/edit.html.slim
@@ -4,4 +4,4 @@ div.row
 	= render 'form'
 	= link_to 'Просмотр', @message
 	span  | 
-	= link_to 'Список статей', messages_path
+	= link_to 'Список сообщений', messages_path
