--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,6 +25,8 @@
             <% if user_signed_in? %>
               <% if current_user.has_role? :admin %>
                 <p><%= link_to "Смотреть все заявки", applics_path, class: "btn btn-large btn-success"%></p>
+                <p><%= link_to "Отправка сообщений", messages_path, class: "btn btn-large btn-success"%></p>
+                <p><%= link_to "Мониторинг отправки", "resque", class: "btn btn-large btn-success", target: "_blank"%></p>
               <% else %>
                 <% if current_user.applic %>
                   <p><%= link_to t(:step2_view_btn), current_user.applic, class: "btn btn-large btn-success"%></p>
