--- a/app/views/static_pages/hotel.html.slim
+++ b/app/views/static_pages/hotel.html.slim
@@ -1,6 +1,10 @@
 h2 Как добраться
 div.mytext
   p Иногородние участники конференции размещаются в гостинице «Октябрьская», расположенной по адресу: Екатеринбург, ул. Софьи Ковалевской, д. 17.<br/> Телефоны: +7 (343) 253-20-55, +7 (343) 266-32-39.
+  ul
+    li = link_to "Проезд от аэропорта и жд вокзала до гостинницы", "#1"
+    li = link_to "Проезд от гостиницы, аэропорта и жд вокзала до места проведения", "#2"
+a name="1"
 h3 Схемы проезда от аэропорта и жд вокзала до гостиницы
 p Гостиница расположена недалеко от остановки  «Академическая»
 p Чтобы доехать от аэропорта «Кольцово» до остановки «Академическая», в аэропорту необходимо сесть на автобус №1, на остановке «Декабристов (ул. Белинского)» пересесть на маршрутное такси №030 и доехать до остановки «Академическая». Время в пути займет около 1 ч.
@@ -9,6 +13,7 @@ p Чтобы доехать от жд вокзала «Екатеринбург-
 p = image_tag "trip2.jpg"
 p Расстояние от остановки «Академическая» до гостиницы «Октябрьская» примерно 350 м. Выйдя из маршрутного такси, необходимо дойти до перекрестка и на нем повернуть на ул. Академическая. Пройдя 1 квартал, повернуть налево и немного пройти вперед. По правой стороне будет расположена гостиница.
 p = image_tag "trip3.jpg"
+a name="2"
 h3 Схемы проезда от гостиницы, аэропорта и жд вокзала до места проведения конференции (УрФУ)
 p Конференция будет проходить в УрФУ по адресу ул. Мира, 19. 
 p Дорога от гостиницы до УрФУ пешком займет около 15 мин. Выйдя из гостиницы, необходимо повернуть направо и идти вдоль ул. Софьи Ковалевской, пересекая ул. Первомайская, до пересечения с пер. Лобачевского. Так и находится УрФУ.
