update conf program

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,8 +18,8 @@
               Тэн Э.Б., проф. Национального исследовательского технологического университета "МИСиС", председатель оргкомитета конференции
             </div>
             <div id="attach">
-              <p style="text-align:center;"><%= link_to "Скачать информационное письмо (на русском)", '/docs/info_letter_eburg2014_rus.docx' %></p>
-              <p style="text-align:center;"><%= link_to "Download informational letter (in english)", '/docs/Inform1-AKSTSconf2014_eng.pdf'%></p>  
+              <p style="text-align:center;"><%= link_to "Скачать программу конференции (Рус.)", '/docs/Program_RU_5.pdf' %></p>
+              <p style="text-align:center;"><%= link_to "Download conference program (Eng.)", '/docs/Program_ENG_5.pdf'%></p>  
             </div>
             <div class="buttonsclass">
             <% if user_signed_in? %>
